--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "heroku": "^7.59.2",
     "nodemailer": "^6.7.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "cd front-end && npm install && npm run build"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
